// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InitRegistrationPage should not let user proceed if registration has not yet started 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
  >
    <div
      class="public-registration__grid"
    >
      <div
        class="rows public-registration__grid__heading public-registration__grid__no-stepper"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        >
          unavailable.upcoming.title
        </h1>
        <div
          class="header-separator MuiBox-root css-0"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
        style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="public-registration__grid__form-container"
        >
          <div
            class="rows gapped"
          >
            <div
              class="rows"
            >
              <div
                class="rows-gapped-xxs"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examSession: 
                  <b>
                    yki.common.languages.fin, yki.common.languageLevel.YLIN
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examDate: 
                  <b>
                    12/29/2039
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  institution: 
                  <b>
                    Amiedu, Jokukatu 4, Tampere
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  registrationTime: 
                  <b>
                    12/01/2030 - 12/10/2039
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examFee: 
                  <b>
                    0 or 200 €
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  openings: 
                  <b>
                    full
                  </b>
                </p>
              </div>
            </div>
            <div
              class="rows gapped"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                upcoming.description
              </p>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
                href="/yki/ilmoittautuminen"
                tabindex="0"
              >
                backToHomePage
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should not let user proceed if registration period has already ended 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
  >
    <div
      class="public-registration__grid"
    >
      <div
        class="rows public-registration__grid__heading public-registration__grid__no-stepper"
      >
        <h1
          class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
        >
          unavailable.past.title
        </h1>
        <div
          class="header-separator MuiBox-root css-0"
        />
      </div>
      <div
        class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
        style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
      >
        <div
          class="public-registration__grid__form-container"
        >
          <div
            class="rows gapped"
          >
            <div
              class="rows"
            >
              <div
                class="rows-gapped-xxs"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examSession: 
                  <b>
                    yki.common.languages.fin, yki.common.languageLevel.YLIN
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examDate: 
                  <b>
                    01/01/2035
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  institution: 
                  <b>
                    Amiedu, Jokukatu 4, Tampere
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  registrationTime: 
                  <b>
                    01/01/2023 - 01/03/2023
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  examFee: 
                  <b>
                    0 or 200 €
                  </b>
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  openings: 
                  <b>
                    full
                  </b>
                </p>
              </div>
            </div>
            <div
              class="rows gapped"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              >
                past.description
              </p>
              <a
                class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary fit-content-max-width css-1mns5ui-MuiButtonBase-root-MuiButton-root"
                href="/yki/ilmoittautuminen"
                tabindex="0"
              >
                backToHomePage
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`InitRegistrationPage should prompt user to first identify if regular admission is ongoing and there is room 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column public-registration css-1qf2j99-MuiGrid-root"
  >
    <div
      class="MuiGrid-root MuiGrid-direction-xs-row public-registration css-17fpwt7-MuiGrid-root"
    >
      <div
        class="public-registration__grid"
      >
        <div
          class="rows gapped-xxl"
        >
          <div
            aria-label="label"
            class="MuiStepper-root MuiStepper-horizontal public-registration__grid__stepper css-ibtndc-MuiStepper-root"
            role="group"
          >
            <div
              class="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
            >
              <span
                aria-current="step"
                class="MuiStepLabel-root MuiStepLabel-horizontal css-3yr9gi-MuiStepLabel-root"
              >
                <span
                  class="MuiStepLabel-iconContainer Mui-active css-1b2ju2j-MuiStepLabel-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root Mui-active css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                    />
                    <text
                      class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                      dominant-baseline="central"
                      text-anchor="middle"
                      x="12"
                      y="12"
                    >
                      1
                    </text>
                  </svg>
                </span>
                <span
                  class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
                >
                  <span
                    class="MuiStepLabel-label Mui-active css-12eb3rq-MuiStepLabel-label"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    >
                      phase phaseNumber: step.Identify
                    </p>
                    <span
                      aria-hidden="true"
                    >
                      step.Identify
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
            >
              <span
                class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
              />
            </div>
            <div
              class="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
            >
              <span
                aria-current="false"
                class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
              >
                <span
                  class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                    />
                    <text
                      class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                      dominant-baseline="central"
                      text-anchor="middle"
                      x="12"
                      y="12"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <span
                  class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
                >
                  <span
                    class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    >
                      phase phaseNumber: step.Register
                    </p>
                    <span
                      aria-hidden="true"
                    >
                      step.Register
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
            >
              <span
                class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
              />
            </div>
            <div
              class="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
            >
              <span
                aria-current="false"
                class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
              >
                <span
                  class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                    />
                    <text
                      class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                      dominant-baseline="central"
                      text-anchor="middle"
                      x="12"
                      y="12"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <span
                  class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
                >
                  <span
                    class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    >
                      phase phaseNumber: step.Payment
                    </p>
                    <span
                      aria-hidden="true"
                    >
                      step.Payment
                    </span>
                  </span>
                </span>
              </span>
            </div>
            <div
              class="MuiStepConnector-root MuiStepConnector-horizontal Mui-disabled css-9ydz1a-MuiStepConnector-root"
            >
              <span
                class="MuiStepConnector-line MuiStepConnector-lineHorizontal css-14ncu80-MuiStepConnector-line"
              />
            </div>
            <div
              class="MuiStep-root MuiStep-horizontal css-mlh15c-MuiStep-root"
            >
              <span
                aria-current="false"
                class="MuiStepLabel-root MuiStepLabel-horizontal Mui-disabled public-registration__grid__stepper__step-disabled css-3yr9gi-MuiStepLabel-root"
              >
                <span
                  class="MuiStepLabel-iconContainer Mui-disabled css-1b2ju2j-MuiStepLabel-iconContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiStepIcon-root css-3hpdci-MuiSvgIcon-root-MuiStepIcon-root"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <circle
                      cx="12"
                      cy="12"
                      r="12"
                    />
                    <text
                      class="MuiStepIcon-text css-1g86afo-MuiStepIcon-text"
                      dominant-baseline="central"
                      text-anchor="middle"
                      x="12"
                      y="12"
                    >
                      4
                    </text>
                  </svg>
                </span>
                <span
                  class="MuiStepLabel-labelContainer css-p8xe3-MuiStepLabel-labelContainer"
                >
                  <span
                    class="MuiStepLabel-label Mui-disabled css-12eb3rq-MuiStepLabel-label"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-17f73yo-MuiTypography-root"
                    >
                      phase phaseNumber: step.Done
                    </p>
                    <span
                      aria-hidden="true"
                    >
                      step.Done
                    </span>
                  </span>
                </span>
              </span>
            </div>
          </div>
          <div
            class="rows public-registration__grid__heading"
          >
            <h1
              class="MuiTypography-root MuiTypography-h1 css-10l7o3s-MuiTypography-root"
            >
              title
            </h1>
            <div
              class="header-separator MuiBox-root css-0"
            />
          </div>
        </div>
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation3 css-1gtchvp-MuiPaper-root"
          style="--Paper-shadow: 0px 3px 3px -2px rgba(0,0,0,0.2),0px 3px 4px 0px rgba(0,0,0,0.14),0px 1px 8px 0px rgba(0,0,0,0.12);"
        >
          <div
            class="public-registration__grid__form-container"
          >
            <div
              class="rows gapped"
            >
              <div
                class="rows"
              >
                <div
                  class="rows-gapped-xxs"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    examSession: 
                    <b>
                      yki.common.languages.fin, yki.common.languageLevel.KESKI
                    </b>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    examDate: 
                    <b>
                      04/06/2019
                    </b>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    institution: 
                    <b>
                      Amiedu, Jokukatu 4, Tampere
                    </b>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    registrationTime: 
                    <b>
                      02/01/2019 - 02/28/2039
                    </b>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    examFee: 
                    <b>
                      176 €
                    </b>
                  </p>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    openings: 
                    <b>
                      20
                    </b>
                  </p>
                </div>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
              />
              <div
                class="gapped rows"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 css-o2za6n-MuiTypography-root"
                >
                  selectIdentificationMethod
                </h2>
                <p
                  class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                >
                  caption
                </p>
                <div
                  class="rows"
                >
                  <h3
                    class="MuiTypography-root MuiTypography-h3 css-13msox4-MuiTypography-root"
                  >
                    withFinnishSSN.description
                  </h3>
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    withFinnishSSN.info
                  </p>
                </div>
                <a
                  class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-r1ewpe-MuiButtonBase-root-MuiButton-root"
                  href="/yki/auth/?examSessionId=11&toQueue=false"
                  tabindex="0"
                >
                  suomiFiButtonText
                </a>
                <div
                  class="columns"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                    data-testid="ExpandMoreIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M16.59 8.59 12 13.17 7.41 8.59 6 10l6 6 6-6z"
                    />
                  </svg>
                  <button
                    aria-controls="public-registration--email-link-order__input-region"
                    aria-expanded="false"
                    class="public-registration--email-link-order__reveal-btn"
                    id="public-registration--email-link-order__reveal-btn"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                    >
                      withoutFinnishSSN.description
                    </p>
                  </button>
                </div>
                <div
                  aria-labelledby="public-registration--email-link-order__reveal-btn"
                  hidden=""
                  id="public-registration--email-link-order__input-region"
                  role="region"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                  >
                    withoutFinnishSSN.info
                  </p>
                  <div
                    class="columns gapped align-items-end"
                  >
                    <div
                      class="rows"
                    >
                      <label
                        for="email-identification__email-input"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                        >
                          <b>
                            label
                          </b>
                        </p>
                      </label>
                      <p
                        class="MuiTypography-root MuiTypography-body1 css-rizt0-MuiTypography-root"
                      >
                        placeholder
                      </p>
                      <div
                        class="MuiFormControl-root MuiTextField-root public-registration__grid__form-container__registration-text-field css-1xp5r68-MuiFormControl-root-MuiTextField-root"
                      >
                        <div
                          class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-colorPrimary MuiInputBase-formControl css-quhxjy-MuiInputBase-root-MuiOutlinedInput-root"
                        >
                          <input
                            aria-invalid="false"
                            autocomplete="email"
                            class="MuiInputBase-input MuiOutlinedInput-input css-16wblaj-MuiInputBase-input-MuiOutlinedInput-input"
                            id="email-identification__email-input"
                            type="email"
                            value=""
                          />
                          <fieldset
                            aria-hidden="true"
                            class="MuiOutlinedInput-notchedOutline css-1ll44ll-MuiOutlinedInput-notchedOutline"
                          >
                            <legend
                              class="css-w4cd9x"
                            >
                              <span
                                aria-hidden="true"
                                class="notranslate"
                              >
                                ​
                              </span>
                            </legend>
                          </fieldset>
                        </div>
                      </div>
                    </div>
                    <div
                      class="rows"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-contained MuiButton-containedSecondary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorSecondary public-registration__grid__form-container__registration-button css-1mns5ui-MuiButtonBase-root-MuiButton-root"
                        tabindex="0"
                        type="button"
                      >
                        emailButtonText
                      </button>
                    </div>
                     
                  </div>
                </div>
                <div
                  class="columns margin-top-lg justify-content-center"
                >
                  <div
                    class="rows flex-end gapped margin-top-lg align-items-center"
                  >
                    <a
                      class="custom-button-link"
                      href="/yki/ilmoittautuminen"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary MuiButton-root MuiButton-text MuiButton-textSecondary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-colorSecondary css-1xj59sp-MuiButtonBase-root-MuiButton-root"
                        data-testid="public-registration__controlButtons__abort"
                        tabindex="0"
                        type="button"
                      >
                        abortRegistration
                      </button>
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
     
  </div>
</div>
`;
